--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,46 +1,49 @@
 @use "./reset.scss";
 
+.ttl{
+  text-align: center;
+  font-size: 24px;
+  margin: 20px 0;
+}
+
+.box{
+  display: grid;
+  gap: 5px;
+  padding: 0 50px;
+  grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+}
+
 .card {
-  width: 10%;
   position: relative;
   cursor: pointer;
-}
-
-.card::before {
-  content: "";
-  display: block;
-  padding-top: 142.5%;
-}
-
-/* カード内の画像 */
-.card img {
-  width: 100%;
-}
-
-/* カード裏面・表面の共通スタイル */
-.card .back,
-.card .front {
-  transition: all 0.6s;
-  position: absolute;
-  left: 0;
-  top: 0;
-  height: 100%;
-  width: 100%;
-  z-index: -1;
-  backface-visibility: hidden;
-}
-
-/* カード表面のスタイル */
-.card .front {
-  transform: rotateY(-180deg);
-}
-
-/* ホバー時のカード裏面 */
-.card.is-open .back {
-  transform: rotateY(180deg);
-}
-
-/* ホバー時のカード表面 */
-.card.is-open .front {
-  transform: rotateY(0);
+  &::before {
+    content: "";
+    display: block;
+    padding-top: 142.5%;
+  }
+  & img{
+    width: 100%;
+  }
+  &_back, &_front {
+    transition: all 0.6s;
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    z-index: -1;
+    backface-visibility: hidden;
+  }
+  &_front {
+    transform: rotateY(-180deg);
+  }
+  &.is-open .card_back {
+    transform: rotateY(180deg);
+  }
+  &.is-open .card_front {
+    transform: rotateY(0);
+  }
+  &.clear{
+    opacity: 0;
+  }
 }
