--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,30 +1,48 @@
 @use "./reset.scss";
 
-.ttl{
-  text-align: center;
-  font-size: 24px;
-  margin: 20px 0;
+body {
+  padding: 40px 0;
+  background-color: rgb(31, 127, 31);
+  box-shadow: inset 0px 0px 40px 10px rgba(0, 0, 0, 0.27);
+  min-height: 100vh;
 }
 
-.box{
-  display: grid;
+.ttl {
+  text-align: center;
+  font-size: 36px;
+  margin-bottom: 40px;
+  text-shadow: 2px 2px 4px #000000;
+  color: #ffffff;
+  padding: 10px 20px;
+  border-radius: 10px;
+}
+
+.box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   gap: 5px;
+  flex-wrap: wrap;
   padding: 0 50px;
-  grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
 }
 
 .card {
+  width: 120px;
   position: relative;
   cursor: pointer;
+
   &::before {
     content: "";
     display: block;
     padding-top: 142.5%;
   }
-  & img{
+
+  & img {
     width: 100%;
   }
-  &_back, &_front {
+
+  &_back,
+  &_front {
     transition: all 0.6s;
     position: absolute;
     left: 0;
@@ -34,16 +52,20 @@
     z-index: -1;
     backface-visibility: hidden;
   }
+
   &_front {
     transform: rotateY(-180deg);
   }
+
   &.is-open .card_back {
     transform: rotateY(180deg);
   }
+
   &.is-open .card_front {
     transform: rotateY(0);
   }
-  &.clear{
+
+  &.clear {
     opacity: 0;
   }
 }
